@@ -21,7 +21,7 @@
 <!ENTITY exo-csource SYSTEM "exo-csource.xml">
 
 <!ENTITY version SYSTEM "version.xml">
-<!ENTITY date "March 2005">
+<!ENTITY date "August 2005">
 ]>
 
 <book id="index" lang="en">
@@ -153,17 +153,6 @@
             <para>
               The Xfce utility library provides various helper functions and classes for
               C programmers, that aren't directly related to GUI tasks.
-            </para>
-          </listitem>
-        </varlistentry>
-
-        <varlistentry>
-          <term>libxfcegui4</term>
-          <listitem>
-            <para>
-              The Xfce GUI library extends the basic functionality provided by the GTK+
-              library with widgets and other classes that were required in the development
-              of the Xfce desktop environment.
             </para>
           </listitem>
         </varlistentry>
