@@ -56,6 +56,9 @@ button. No need to write signal handlers for this purpose any more.
 Manual</ulink>, <link linkend="exo-Extensions-to-GObject">Extensions to GObject</link>
 </para>
 
+<!-- ##### SECTION Stability_Level ##### -->
+
+
 <!-- ##### STRUCT ExoBinding ##### -->
 <para>
 Opaque structure representing a one-way binding between two properties. It
