@@ -28,6 +28,9 @@ type="http">GtkCellRendererText</ulink>, <link
 linkend="exo-Extensions-to-Pango">Exo Pango Extensions</link>
 </para>
 
+<!-- ##### SECTION Stability_Level ##### -->
+
+
 <!-- ##### STRUCT ExoCellRendererEllipsizedText ##### -->
 <para>
 
