@@ -17,6 +17,9 @@ they are being built against or being linked with.
 
 </para>
 
+<!-- ##### SECTION Stability_Level ##### -->
+
+
 <!-- ##### VARIABLE exo_major_version ##### -->
 <para>
 The major version number of the exo library (e.g. in libexo 0.1.3
