@@ -24,6 +24,9 @@ type="http">GtkLabel</ulink>, <link linkend="exo-Extensions-to-Pango">Exo
 Pango Extensions</link>
 </para>
 
+<!-- ##### SECTION Stability_Level ##### -->
+
+
 <!-- ##### STRUCT ExoEllipsizedLabel ##### -->
 <para>
 
