@@ -15,6 +15,9 @@ provided by the gdk-pixbuf library.
 
 </para>
 
+<!-- ##### SECTION Stability_Level ##### -->
+
+
 <!-- ##### FUNCTION exo_gdk_pixbuf_scale_ratio ##### -->
 <para>
 
