@@ -16,6 +16,9 @@ functionality provided by the GObject library.
 Reference Manual</ulink>
 </para>
 
+<!-- ##### SECTION Stability_Level ##### -->
+
+
 <!-- ##### FUNCTION exo_g_value_transform_negate ##### -->
 <para>
 
