@@ -52,6 +52,9 @@ enum
 <ulink url="http://developer.gnome.org/doc/API/2.0/gtk/TreeWidget.html">Tree and List Widget Overview</ulink>
 </para>
 
+<!-- ##### SECTION Stability_Level ##### -->
+
+
 <!-- ##### STRUCT ExoIconBar ##### -->
 <para>
 
