@@ -18,6 +18,9 @@ A widget which displays a list of icons in a grid
 <para>
 </para>
 
+<!-- ##### SECTION Stability_Level ##### -->
+
+
 <!-- ##### STRUCT ExoIconView ##### -->
 <para>
   The <structname>ExoIconView</structname> struct contains only
