@@ -15,6 +15,9 @@ MD5 hash implementation
 
 </para>
 
+<!-- ##### SECTION Stability_Level ##### -->
+
+
 <!-- ##### STRUCT ExoMd5Digest ##### -->
 <para>
 
