@@ -20,6 +20,9 @@ linkend="ExoEllipsizedLabel">ExoEllipsizedLabel</link>,
 <link linkend="ExoCellRendererEllipsizedText">ExoCellRendererEllipsizedText</link>
 </para>
 
+<!-- ##### SECTION Stability_Level ##### -->
+
+
 <!-- ##### ENUM ExoPangoEllipsizeMode ##### -->
 <para>
 
