@@ -15,6 +15,9 @@ Dialog to edit toolbars
 	#ExoToolbarsEditor
 </para>
 
+<!-- ##### SECTION Stability_Level ##### -->
+
+
 <!-- ##### STRUCT ExoToolbarsEditorDialog ##### -->
 <para>
 
