@@ -21,6 +21,9 @@ Widget to edit toolbars
 
 </para>
 
+<!-- ##### SECTION Stability_Level ##### -->
+
+
 <!-- ##### STRUCT ExoToolbarsEditor ##### -->
 <para>
 
