@@ -15,6 +15,9 @@ to manage editable toolbars.
 #ExoToolbarsView, #ExoToolbarsEditor, #ExoToolbarsEditorDialog
 </para>
 
+<!-- ##### SECTION Stability_Level ##### -->
+
+
 <!-- ##### STRUCT ExoToolbarsModel ##### -->
 <para>
 
