@@ -15,6 +15,9 @@ A widget that displays toolbars as described in a
 
 </para>
 
+<!-- ##### SECTION Stability_Level ##### -->
+
+
 <!-- ##### STRUCT ExoToolbarsView ##### -->
 <para>
 
