@@ -95,6 +95,9 @@ else use a full-featured XSMP client.
 
 </para>
 
+<!-- ##### SECTION Stability_Level ##### -->
+
+
 <!-- ##### STRUCT ExoXsessionClient ##### -->
 <para>
 
