@@ -1,3 +1,11 @@
+2005-08-25	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-private.{c,h}: Drop the MIME info parser.
+	* docs/reference/tmpl/*.sgml: Regenerate the API documentation
+	  templates.
+	* docs/reference/exo-docs.sgml: Don't list libxfcegui4 as dependency
+	  any longer.
+
 2005-08-22	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-icon-view.c: Disable Gtk+ DnD callbacks when starting a
